feat: 实现用户端启用分类列表缓存